--- a/AccountService/pom.xml
+++ b/AccountService/pom.xml
@@ -5,18 +5,22 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.8</version>
+        <version>2.7.13</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.laptrinhjava</groupId>
-    <artifactId>KafkaDemo</artifactId>
+    <artifactId>AccountService</artifactId>
     <version>1.0</version>
-    <name>KafkaDemo</name>
-    <description>KafkaDemo</description>
+    <name>AccountService</name>
+    <description>AccountService</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
